- disable RTL test that is broken - add URLs to firebase.json - don't include the copy link button for now.

--- a/packages/polar-hooks/firebase.json
+++ b/packages/polar-hooks/firebase.json
@@ -9,6 +9,14 @@
         "destination": "/apps/repository/index.html"
       },
       {
+        "source": "/features",
+        "destination": "/apps/repository/index.html"
+      },
+      {
+        "source": "/settings",
+        "destination": "/apps/repository/index.html"
+      },
+      {
         "source": "/annotations",
         "destination": "/apps/repository/index.html"
       },
