feat: Output test results as a CI artifact, so we can see easily spot number of succeeded/failed tests across different CI runs, potentially finding changes that prevent all tests from being ran (a false pass of tests)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -201,6 +201,9 @@ jobs:
       - store_test_results:
           path: /home/circleci/project/packages
 
+      - store_artifacts:
+          path: /home/circleci/project/packages/polar-bookshelf/karma-result.json
+
   # @ Run tests
   mocha:
     parameters:
