--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -100,7 +100,8 @@
         "wait-for-expect": "3.0.1",
         "workbox-cli": "=5.1.3",
         "polar-test": "0.0.0",
-        "@testing-library/react": "=12.1.2"
+        "@testing-library/react": "=12.1.2",
+        "karma-structured-json-reporter": "=1.0.1"
     },
     "dependencies": {
         "@antv/g6": "=4.3.5",
