feat: Output test results as a CI artifact, so we can see easily spot number of succeeded/failed tests across different CI runs, potentially finding changes that prevent all tests from being run (a false pass of tests)

--- a/packages/polar-admin/package.json
+++ b/packages/polar-admin/package.json
@@ -21,7 +21,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "firebase-tools": "=9.16.0"
+    "firebase-tools": "=9.16.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.15.1",
