--- a/packages/polar-create-module/package.json
+++ b/packages/polar-create-module/package.json
@@ -25,5 +25,7 @@
   },
   "author": "Polar",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {
+    "karma-structured-json-reporter": "=1.0.1"
+  }
 }
