--- a/packages/polar-accounts/package.json
+++ b/packages/polar-accounts/package.json
@@ -26,6 +26,7 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-shared": "0.0.0",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   }
 }
