--- a/packages/polar-answers-api/package.json
+++ b/packages/polar-answers-api/package.json
@@ -23,7 +23,8 @@
     "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "polar-shared": "0.0.0"
