--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -25,7 +25,8 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
-    "polar-test-cache": "0.0.0"
+    "polar-test-cache": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "polar-firebase-admin": "0.0.0",
