--- a/packages/polar-backend-api/package.json
+++ b/packages/polar-backend-api/package.json
@@ -25,7 +25,8 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "files": [
     "**/*.js",
