--- a/packages/polar-backend-datastore/package.json
+++ b/packages/polar-backend-datastore/package.json
@@ -23,5 +23,7 @@
     "polar-shared": "0.0.0",
     "@material-ui/styles": "=4.11.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "karma-structured-json-reporter": "=1.0.1"
+  }
 }
