--- a/packages/polar-backend-shared/package.json
+++ b/packages/polar-backend-shared/package.json
@@ -32,7 +32,8 @@
     "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "polar-shared-webserver": "0.0.0",
