--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -24,7 +24,8 @@
     "@types/node": "=14.17.9",
     "aws-cdk": "=1.121.0",
     "esbuild": "=0.12.25",
-    "firebase-admin": "=10.0.0"
+    "firebase-admin": "=10.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "=1.121.0",
