--- a/packages/polar-content-capture/package.json
+++ b/packages/polar-content-capture/package.json
@@ -28,7 +28,8 @@
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
-    "wait-for-expect": "3.0.1"
+    "wait-for-expect": "3.0.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "jszip": "=3.7.1",
