--- a/packages/polar-dom-text-search/package.json
+++ b/packages/polar-dom-text-search/package.json
@@ -27,7 +27,8 @@
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
     "jsdom-global": "3.0.2",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
