--- a/packages/polar-epub-generator/package.json
+++ b/packages/polar-epub-generator/package.json
@@ -24,7 +24,8 @@
     "@types/mocha": "=9.0.0",
     "@types/node": "=14.17.9",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "jszip": "=3.7.1",
