--- a/packages/polar-firestore-like/package.json
+++ b/packages/polar-firestore-like/package.json
@@ -27,7 +27,8 @@
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
     "@google-cloud/firestore": "=4.15.1",
-    "firebase": "=8.10.0"
+    "firebase": "=8.10.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "polar-shared": "0.0.0"
