--- a/packages/polar-images/package.json
+++ b/packages/polar-images/package.json
@@ -28,6 +28,7 @@
     "chai": "4.2.0",
     "exif-js": "=2.3.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   }
 }
