--- a/packages/polar-lang-classifier/package.json
+++ b/packages/polar-lang-classifier/package.json
@@ -24,7 +24,8 @@
     "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "node-nlp": "=4.22.1"
