--- a/packages/polar-page-metadata-parser/package.json
+++ b/packages/polar-page-metadata-parser/package.json
@@ -26,7 +26,8 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "jsdom": "=16.7.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
