--- a/packages/polar-pdf/package.json
+++ b/packages/polar-pdf/package.json
@@ -25,7 +25,8 @@
     "@types/jsdom": "=16.2.13",
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
