--- a/packages/polar-react-svg-icons/package.json
+++ b/packages/polar-react-svg-icons/package.json
@@ -26,7 +26,9 @@
     "url": "https://github.com/burtonator/polar-app-public/issues"
   },
   "homepage": "https://github.com/burtonator/polar-app-public",
-  "devDependencies": {},
+  "devDependencies": {
+    "karma-structured-json-reporter": "=1.0.1"
+  },
   "dependencies": {
     "polar-react": "0.0.0"
   },
