--- a/packages/polar-readability/package.json
+++ b/packages/polar-readability/package.json
@@ -25,7 +25,8 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-shared": "0.0.0",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "readability": "0.2.0-polar.2"
