--- a/packages/polar-release-metadata/package.json
+++ b/packages/polar-release-metadata/package.json
@@ -29,7 +29,8 @@
     "@types/mocha": "=9.0.0",
     "@types/semver": "=7.3.8",
     "chai": "4.2.0",
-    "mocha": "=9.1.1"
+    "mocha": "=9.1.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@types/node": "=14.17.9",
