--- a/packages/polar-search/package.json
+++ b/packages/polar-search/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0"
+    "polar-test": "0.0.0",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@types/xmldom": "=0.1.31",
