--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -38,7 +38,8 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
-    "wait-for-expect": "3.0.1"
+    "wait-for-expect": "3.0.1",
+    "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "base-x": "=3.0.8",
