feat: Output test results as a CI artifact, so we can see easily spot number of succeeded/failed tests across different CI runs, potentially finding changes that prevent all tests from being run (a false pass of tests)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,7 +202,7 @@ jobs:
           path: /home/circleci/project/packages
 
       - store_artifacts:
-          path: /home/circleci/project/packages/polar-bookshelf/karma-result.json
+          path: /home/circleci/project/packages/*/karma-result.json
 
   # @ Run tests
   mocha:
