--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -217,6 +217,7 @@
     "react-dom": "=17.0.2",
     "@material-ui/styles": "=4.11.4",
     "re-resizable": "=6.6.1",
-    "@nivo/core": "=0.61.0"
+    "@nivo/core": "=0.61.0",
+    "global-jsdom": "=8.4.0"
   }
 }
