--- a/packages/polar-answers/package.json
+++ b/packages/polar-answers/package.json
@@ -30,7 +30,6 @@
   },
   "dependencies": {
     "polar-firebase-admin": "0.0.0",
-    "@google-cloud/language": "=4.2.5",
     "gpt-3-encoder": "^1.1.3",
     "polar-answers-api": "0.0.0",
     "polar-blocks": "0.0.0",
@@ -39,9 +38,7 @@
     "polar-pdf": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-cache": "0.0.0",
-    "polar-epub": "0.0.0",
-    "firebase-functions": "=3.16.0",
-    "@google-cloud/storage": "=5.8.5"
+    "polar-epub": "0.0.0"
   },
   "files": [
     "**/*.js",
