--- a/packages/polar-desktop-app/package.json
+++ b/packages/polar-desktop-app/package.json
@@ -54,14 +54,12 @@
     "electron-notarize": "1.0.0",
     "electron-updater": "=4.3.8",
     "mocha": "=9.1.1",
-    "null-loader": "=4.0.1",
     "source-map-support": "=0.5.19",
     "builder-util-runtime": "=8.9.2",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
-    "polar-shared": "0.0.0",
-    "polar-electron-framework": "0.0.0"
+    "polar-shared": "0.0.0"
   },
   "collective": {
     "type": "opencollective",
