--- a/packages/polar-firebase-admin/package.json
+++ b/packages/polar-firebase-admin/package.json
@@ -21,20 +21,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
-    "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@google-cloud/firestore": "=4.15.1",
     "@google-cloud/storage": "=5.8.5",
     "firebase-admin": "=10.0.0",
-    "polar-firebase": "0.0.0",
     "polar-firestore-like": "0.0.0",
-    "firebase-functions": "=3.16.0",
-    "polar-shared": "0.0.0"
+    "firebase-functions": "=3.16.0"
   }
 }
