--- a/packages/polar-migration-block-annotations/package.json
+++ b/packages/polar-migration-block-annotations/package.json
@@ -20,9 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
-    "chai": "4.2.0",
     "mocha": "=9.1.1",
     "karma-structured-json-reporter": "=1.0.1"
   },
@@ -32,8 +30,7 @@
     "polar-firestore-like": "0.0.0",
     "polar-blocks": "0.0.0",
     "polar-rpc": "0.0.0",
-    "polar-markdown-parser": "0.0.0",
-    "firebase-functions": "=3.16.0"
+    "polar-markdown-parser": "0.0.0"
   },
   "files": [
     "**/*.js",
