--- a/packages/polar-private-beta/package.json
+++ b/packages/polar-private-beta/package.json
@@ -21,12 +21,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
-    "@types/jsdom": "=16.2.13",
     "@types/mocha": "=9.0.0",
-    "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
@@ -37,8 +33,7 @@
     "polar-private-beta-api": "0.0.0",
     "polar-rpc": "0.0.0",
     "polar-sendgrid": "0.0.0",
-    "polar-firestore-like": "0.0.0",
-    "firebase-functions": "=3.16.0"
+    "polar-firestore-like": "0.0.0"
   },
   "files": [
     "**/*.js",
