--- a/packages/polar-sentry-cloud-functions/package.json
+++ b/packages/polar-sentry-cloud-functions/package.json
@@ -21,16 +21,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
     "@types/mocha": "=9.0.0",
-    "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "polar-test": "0.0.0",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
     "@google-cloud/functions-framework": "=1.7.1",
-    "@sentry/serverless": "=5.27.2",
-    "@types/aws-lambda": "=8.10.64"
+    "@sentry/serverless": "=5.27.2"
   }
 }
