--- a/packages/polar-text-highlighter/package.json
+++ b/packages/polar-text-highlighter/package.json
@@ -20,20 +20,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/chai": "4.2.11",
-    "@types/jsdom": "=16.2.13",
-    "@types/jsdom-global": "3.0.2",
     "@types/mocha": "=9.0.0",
-    "chai": "4.2.0",
-    "jsdom": "=16.7.0",
-    "jsdom-global": "3.0.2",
     "mocha": "=9.1.1",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
-    "@types/node": "=14.17.9",
-    "polar-shared": "0.0.0",
-    "polar-test": "0.0.0"
+    "polar-shared": "0.0.0"
   },
   "files": [
     "**/*.js",
