--- a/packages/polar-web-extension-api/package.json
+++ b/packages/polar-web-extension-api/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chrome": "0.0.114",
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
     "karma-structured-json-reporter": "=1.0.1"
