--- a/packages/polar-anki-apkg/package.json
+++ b/packages/polar-anki-apkg/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "polar-anki-export",
+  "name": "polar-anki-apkg",
   "version": "0.0.0",
   "description": "Flashcards export to Anki",
   "scripts": {
@@ -17,9 +17,16 @@
   },
   "author": "Polar",
   "license": "ISC",
-  "devDependencies": {
-  },
   "dependencies": {
-    "polar-anki-apkg": "0.0.0"
+    "@types/node": "14.17.9",
+    "archiver": "^5.3.0",
+    "better-sqlite3": "^7.4.5",
+    "rimraf": "^2.6.2",
+    "sha1": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.4.2",
+    "@types/rimraf": "^3.0.2",
+    "@types/sha1": "^1.1.3"
   }
 }
