--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "=14.17.9",
     "aws-cdk": "=1.121.0",
+    "esbuild": "=0.12.25",
     "karma-structured-json-reporter": "=1.0.1"
   },
   "dependencies": {
