--- a/packages/polar-amplitude-backend/package.json
+++ b/packages/polar-amplitude-backend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "polar-firebase-users",
+  "name": "polar-amplitude-backend",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else pnpm run tsc; fi;",
     "test": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else pnpm run mocha; fi;",
+    "compile": "RESULT=\"$(find . -name '*.ts' -o -name '*.tsx' -not -path './node_modules/*' -not -name '*.d.ts*')\" && if [ -z \"$RESULT\" ]; then echo 'Nothing to Compile'; else pnpm run tsc; fi;",
     "mocha": "mocha -p --retries 1 --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
     "eslint": "eslint -c ../../.eslintrc.json . --no-error-on-unmatched-pattern",
     "tsc": "tsc --project ./tsconfig.json",
@@ -22,18 +21,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/mocha": "=9.0.0",
-    "mocha": "=9.1.1",
-    "karma-structured-json-reporter": "=1.0.1"
+    "mocha": "=9.1.1"
   },
   "dependencies": {
-    "polar-firebase": "0.0.0",
-    "polar-firebase-admin": "0.0.0",
-    "polar-firestore-like": "0.0.0",
-    "polar-sendgrid": "0.0.0",
-    "polar-amplitude-backend": "0.0.0"
+    "@amplitude/node": "=1.9.1",
+    "@amplitude/identify": "=1.9.1",
+    "polar-shared": "0.0.0"
   },
-  "peerDependencies": {
-    "firebase": "=8.10.0",
-    "firebase-admin": "=10.0.0"
-  }
+  "files": [
+    "**/*.js",
+    "**/*.d.ts",
+    "package.json"
+  ]
 }
