--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -24,7 +24,6 @@
     "mocha-ci": "mocha -p --retries 1 --reporter xunit --reporter-option output=test_results.xml --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'"
   },
   "dependencies": {
-    "@amplitude/node": "=1.8.0",
     "@google-cloud/storage": "=5.8.5",
     "@types/body-parser": "=1.19.1",
     "@types/cors": "=2.8.6",
@@ -43,6 +42,7 @@
     "react": "=17.0.2",
     "react-dom": "=17.0.2",
     "polar-accounts": "0.0.0",
+    "polar-amplitude-backend": "0.0.0",
     "polar-answers": "0.0.0",
     "polar-answers-api": "0.0.0",
     "polar-backend-api": "0.0.0",
