--- a/packages/polar-anki-apkg/package.json
+++ b/packages/polar-anki-apkg/package.json
@@ -22,7 +22,8 @@
     "archiver": "^5.3.0",
     "better-sqlite3": "^7.4.5",
     "rimraf": "^2.6.2",
-    "sha1": "^1.1.1"
+    "sha1": "^1.1.1",
+    "polar-shared": "0.0.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.4.2",
