modified test to polar use cases still a wip...

--- a/packages/polar-anki-export/package.json
+++ b/packages/polar-anki-export/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
   },
   "dependencies": {
-    "polar-anki-apkg": "0.0.0"
+    "polar-anki-apkg": "0.0.0",
+    "polar-shared": "0.0.0"
   }
 }
