--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -48,6 +48,7 @@
     "polar-backend-api": "0.0.0",
     "polar-backend-shared": "0.0.0",
     "polar-block-permissions": "0.0.0",
+    "polar-blocks": "0.0.0",
     "polar-private-beta": "0.0.0",
     "polar-firebase": "0.0.0",
     "polar-firebase-admin": "0.0.0",
