--- a/packages/polar-anki-apkg/package.json
+++ b/packages/polar-anki-apkg/package.json
@@ -18,16 +18,17 @@
   "author": "Polar",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "14.17.9",
-    "archiver": "^5.3.0",
-    "better-sqlite3": "^7.4.5",
-    "rimraf": "^2.6.2",
-    "sha1": "^1.1.1",
+    "@types/node": "=14.17.9",
+    "archiver": "=5.3.0",
+    "better-sqlite3": "=7.4.5",
+    "rimraf": "=2.6.2",
+    "sha1": "=1.1.1",
     "polar-shared": "0.0.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.4.2",
-    "@types/rimraf": "^3.0.2",
-    "@types/sha1": "^1.1.3"
+    "@types/better-sqlite3": "=7.4.2",
+    "@types/rimraf": "=3.0.2",
+    "@types/sha1": "=1.1.3",
+    "@types/archiver": "=5.1.1"
   }
 }
