add uploading source-map files to sentry

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,6 +280,10 @@ jobs:
           command: |
             export FIREBASE_HOSTING_TARGET=<< parameters.firebase_hosting_target >>
             /home/circleci/project/scripts/ci/deploy-to-firebase.sh
+      - run:
+          name: Upload Sourcemap to Sentry
+          command: |
+            sentry-cli releases files "$TAG" upload-sourcemaps /home/circleci/project/packages/polar-bookshelf/dist/public/
       - slack/notify:
           custom: |
             {
