--- a/packages/polar-payments-stripe/package.json
+++ b/packages/polar-payments-stripe/package.json
@@ -27,8 +27,7 @@
     "chai": "4.2.0",
     "mocha": "=9.1.1"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "files": [
     "**/*.js",
     "**/*.d.ts",
