--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -47,6 +47,7 @@
     "polar-answers-api": "0.0.0",
     "polar-backend-api": "0.0.0",
     "polar-backend-shared": "0.0.0",
+    "polar-payments-stripe": "0.0.0",
     "polar-block-permissions": "0.0.0",
     "polar-blocks": "0.0.0",
     "polar-private-beta": "0.0.0",
