--- a/packages/polar-payments-stripe/package.json
+++ b/packages/polar-payments-stripe/package.json
@@ -26,11 +26,19 @@
     "@types/mocha": "=9.0.0",
     "chai": "4.2.0",
     "mocha": "=9.1.1",
-    "@types/stripe": "=6.32.13"
+    "@types/stripe": "=6.32.13",
+    "polar-test": "=0.0.0"
   },
   "dependencies": {
     "stripe": "=8.119.0",
-    "polar-shared": "=0.0.0"
+    "polar-shared": "=0.0.0",
+    "polar-accounts": "=0.0.0",
+    "polar-firebase-admin": "=0.0.0",
+    "polar-amplitude-backend": "=0.0.0",
+    "polar-firestore-like": "=0.0.0",
+    "polar-sendgrid": "=0.0.0",
+    "polar-firebase": "=0.0.0",
+    "polar-rpc": "=0.0.0"
   },
   "files": [
     "**/*.js",
