--- a/packages/polar-cdk/package.json
+++ b/packages/polar-cdk/package.json
@@ -34,13 +34,14 @@
     "polar-accounts": "0.0.0",
     "polar-admin": "0.0.0",
     "polar-firebase": "0.0.0",
-    "polar-hooks-functions": "0.0.0",
+    "polar-rpc": "0.0.0",
     "polar-private-beta": "0.0.0",
     "polar-private-beta-api": "0.0.0",
     "polar-shared": "0.0.0",
     "polar-firebase-admin": "0.0.0",
     "polar-answers": "0.0.0",
     "source-map-support": "=0.5.19",
-    "@aws-cdk/aws-logs": "=1.132.0"
+    "@aws-cdk/aws-logs": "=1.132.0",
+    "polar-payments-stripe": "0.0.0"
   }
 }
