--- a/packages/polar-firebase-admin/package.json
+++ b/packages/polar-firebase-admin/package.json
@@ -30,6 +30,8 @@
     "@google-cloud/storage": "=5.8.5",
     "firebase-admin": "=10.0.0",
     "polar-firestore-like": "0.0.0",
-    "firebase-functions": "=3.16.0"
+    "firebase-functions": "=3.16.0",
+    "polar-rpc": "0.0.0",
+    "polar-shared": "0.0.0"
   }
 }
