--- a/packages/polar-backend-api/package.json
+++ b/packages/polar-backend-api/package.json
@@ -20,6 +20,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "polar-blocks": "0.0.0"
+  },
   "devDependencies": {
     "@types/mocha": "=9.0.0",
     "mocha": "=9.1.1",
