--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -529,7 +529,7 @@ workflows:
           working_directory: /root/project/packages/polar-bookshelf
           start: export WEBPACK_BUNDLE=repository && time yarn run webpack-serve
           wait-on: "http://localhost:8050"
-          command: npx cypress install && npx cypress run --env WIDTH=1920,HEIGHT=1080 --browser chrome
+          command: cd ../polar-cypress && npx cypress install && npx cypress run --env WIDTH=1920,HEIGHT=1080 --browser chrome
           attach-workspace: true
           store_artifacts: true
 
