--- a/packages/polar-bookshelf/package.json
+++ b/packages/polar-bookshelf/package.json
@@ -32,10 +32,8 @@
     "tsc-watch": "tsc --project ./tsconfig.json --watch",
     "test-ci": "RESULT=\"$(find . -name '**Test.js' -o -name '**TestN.js' -o -name '**TestNK.js' -not -path 'node_modules/*')\" && if [ -z \"$RESULT\" ]; then echo 'No tests'; else pnpm run mocha-ci; fi;",
     "mocha-ci": "mocha -p --retries 1 --reporter xunit --reporter-option output=test_results.xml --jobs=1 --timeout 60000 --exit './{,!(node_modules)/**}/*Test.js' './{,!(node_modules)/**}/*TestN.js' './{,!(node_modules)/**}/*TestNK.js'",
-    "cypress-desktop-chrome": "npx cypress run --record --key 63fdd419-e3fd-420f-992c-30154fc76121 --env WIDTH=1920,HEIGHT=1080 --browser chrome",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token 8408551551bf --exit-once-uploaded"
+    "build-storybook": "build-storybook"
   },
   "repository": "https://github.com/burtonator/polar-bookshelf",
   "keywords": [
@@ -81,7 +79,6 @@
     "@types/throttle-debounce": "=2.1.0",
     "babel-loader": "^8.2.3",
     "chai": "4.2.0",
-    "cypress": "=9.1.0",
     "dotenv": "=8.6.0",
     "jsdom": "=16.7.0",
     "mocha": "=9.1.1",
