--- a/packages/polar-shared/package.json
+++ b/packages/polar-shared/package.json
@@ -39,7 +39,8 @@
     "mocha": "=9.1.1",
     "polar-test": "0.0.0",
     "wait-for-expect": "3.0.1",
-    "karma-structured-json-reporter": "=1.0.1"
+    "karma-structured-json-reporter": "=1.0.1",
+    "polar-browsers": "0.0.0"
   },
   "dependencies": {
     "base-x": "=3.0.8",
