--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -255,6 +255,19 @@ jobs:
           paths:
             - project
 
+  # @ Build Polar Next.js website
+  build-website-v2:
+    parameters:
+      executor:
+        type: executor
+    executor: << parameters.executor>>
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Next.JS Build
+          command: cd /home/circleci/project/packages-isolated/website-v2 && yarn install && yarn build
+
   # @ Deploy Polar-Bookshelf
   deploy-polar-app:
     parameters:
@@ -483,7 +496,7 @@ workflows:
                 - master
 
       ## ^ Commonality Between Sub-Workflows
-      # @ Setup the repo for the subsquent stages
+      # @ Setup the repo for the subsequent stages
       - setting-up:
           executor: large
 
@@ -518,6 +531,10 @@ workflows:
           executor: large
           requires:
             - Code-Quality
+            - setting-up
+      - build-website-v2:
+          executor: large
+          requires:
             - setting-up
 
       # @ Run Cypress tests for chrome-desktop (1080p)
