chore: Build website-v2 in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -267,7 +267,15 @@ jobs:
       - run:
           name: Next.JS Build
           command: cd /home/circleci/project/packages-isolated/website-v2 && yarn install && yarn build
-
+      - save_cache:
+          key: nextjs-cache-node-modules-{{ checksum "/home/circleci/project/packages-isolated/website-v2/yarn.lock" }}
+          paths:
+            - /home/circleci/project/packages-isolated/website-v2/node_modules
+            - /home/circleci/project/packages-isolated/website-v2/.next/cache
+      - save_cache:
+          key: nextjs-build-cache
+          paths:
+            - /home/circleci/project/packages-isolated/website-v2/.next/cache
   # @ Deploy Polar-Bookshelf
   deploy-polar-app:
     parameters:
