--- a/packages/polar-hooks/functions/package.json
+++ b/packages/polar-hooks/functions/package.json
@@ -71,7 +71,8 @@
     "yargs": "=15.3.1",
     "@sentry/node": "6.15.0",
     "form-data": "=4.0.0",
-    "polar-anki-export": "0.0.0"
+    "polar-anki-export": "0.0.0",
+    "polar-google-cloud-language": "0.0.0"
   },
   "devDependencies": {
     "@types/archiver": "=5.1.1",
