remove @google-cloud dependency

--- a/packages/polar-backend-api/package.json
+++ b/packages/polar-backend-api/package.json
@@ -21,8 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "polar-blocks": "0.0.0",
-    "@google-cloud/language": "=4.2.5"
+    "polar-blocks": "0.0.0"
   },
   "devDependencies": {
     "@types/mocha": "=9.0.0",
