serve and run tests in the same block

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,16 +318,14 @@ jobs:
       - attach_workspace:
           at: ~/
       - run:
-          name: Serve & Wait till socket is available
+          name: Serve & Run Tests
           command: |
             cd /home/circleci/project
             pnpm run serve &
             echo "WAITING FOR SERVER TO START"
             sleep 60
             timeout 300 bash -c 'until echo > /dev/tcp/localhost/8050; do sleep 1; done'
-      - run:
-          name: Run Playwright tests
-          command: (cd /home/circleci/project/packages/polar-playwright && pnpm dlx playwright test --project=chromium)
+            (cd /home/circleci/project/packages/polar-playwright && pnpm dlx playwright test --project=chromium)
 
   # @ Build Polar Next.js website
   build-website-v2:
