test all 3 browsers

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -307,7 +307,7 @@ jobs:
           paths:
             - project
 
-  # @ Run tests
+  # @ Run playwright test for chromium
   playwright-chromium:
     parameters:
       executor:
@@ -324,7 +324,45 @@ jobs:
             pnpm run serve &
             echo "WAITING FOR SERVER TO START"
             npx wait-on "http://localhost:8050"
-            (cd /home/circleci/project/packages/polar-playwright && npx playwright test --project=chromium)
+            (cd /home/circleci/project/packages/polar-playwright && npx playwright test --project=chromium --reporter=list)
+
+  # @ Run playwright test for firfox
+  playwright-firfox:
+    parameters:
+      executor:
+        type: executor
+    executor: << parameters.executor>>
+    description: "Run our karma tests in the browser."
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Serve & Run Tests
+          command: |
+            cd /home/circleci/project
+            pnpm run serve &
+            echo "WAITING FOR SERVER TO START"
+            npx wait-on "http://localhost:8050"
+            (cd /home/circleci/project/packages/polar-playwright && npx playwright test --project=firfox --reporter=list)
+
+  # @ Run playwright test for safari
+  playwright-safari:
+    parameters:
+      executor:
+        type: executor
+    executor: << parameters.executor>>
+    description: "Run our karma tests in the browser."
+    steps:
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Serve & Run Tests
+          command: |
+            cd /home/circleci/project
+            pnpm run serve &
+            echo "WAITING FOR SERVER TO START"
+            npx wait-on "http://localhost:8050"
+            (cd /home/circleci/project/packages/polar-playwright && npx playwright test --project=webkit --reporter=list)
 
   # @ Build Polar Next.js website
   build-website-v2:
