--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -671,6 +671,16 @@ workflows:
           requires:
             - build-polar-app
 
+      - playwright-firefox:
+          executor: large
+          requires:
+            - build-polar-app
+
+      - playwright-safari:
+          executor: large
+          requires:
+            - build-polar-app
+
       # @ Run Cypress tests for chrome-desktop (1080p)
       - cypress/run:
           name: cypress-desktop-chrome
